Update image paths in twp-profile.html

--- a/twp/twp-profile.html
+++ b/twp/twp-profile.html
@@ -9,14 +9,14 @@
 	
 	<h1>Item of the Week: Broken Charging Cable</h1>
 	
-	<img src="cable.jpg" alt="Drawing of a broken charging cable" width="600px">
+	<img src="images/cable.jpeg" alt="Broken charger" width="600px">
 	
 	<h2>Description</h2>
 
 	<p>The item I chose is a broken phone charger cable that I&rsquo;ve had for a couple of years. It&rsquo;s a white USB Lightning cable that&rsquo;s pretty worn out, especially near the ends where it connects to the phone and the outlet. The rubber coating is ripped in a few spots, and you can see the wires underneath. The cable feels stiff and bent in certain places from being wrapped up and shoved into bags so many times. Even when I used it recently, it would only charge my phone if I angled it a certain way or left it completely still.</p>
 	<p>I originally got this charger when I bought my phone, and it became the one I used every day. I kept it in my backpack, used it in my dorm room, and later brought it with me when I moved off campus. I used it constantly, especially at night or while studying. Over time, it started charging more slowly and would randomly stop working. I&rsquo;m getting rid of it now because it barely works anymore and gets warm near the damaged parts, which makes it feel unsafe to keep using.</p>
 	
-	<img src="drawing.jpg" alt="Drawing of a broken charging cable" width="600px">
+	<img src="images/drawing.jpg" alt="Drawing of a broken charging cable" width="600px">
 	
 	<h2>Anecdote</h2>
 	
