Change image source in twp-profile.html
Updated image source for the broken charger item.

--- a/twp/twp-profile.html
+++ b/twp/twp-profile.html
@@ -9,7 +9,7 @@
 	
 	<h1>Item of the Week: Broken Charging Cable</h1>
 	
-	<img src="images/cable.jpeg" alt="Broken charger" width="600px">
+	<img src="images/charger.jpeg" alt="Broken charger" width="600px">
 	
 	<h2>Description</h2>
 
