Remove header and description from index.html
Removed the header and paragraph from the homepage.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>TWP – Online</title>
 </head>
 <body>
-  <h1>Trash of the Week</h1>
-  <p>This is my TWP homepage.</p>
+  <p>twp Project Page</p>
 </body>
 </html>
