Update gallery with new images and item details
Added new images and captions to the gallery section, while removing duplicates. Updated item details in the table to reflect the new items.

--- a/twp/twp-main.html
+++ b/twp/twp-main.html
@@ -112,6 +112,21 @@
   <h2 id="gallery">Gallery: Nine Items from This Week</h2>
 
   <figure>
+    <img src="images/glasses.jpg" alt="Glasses" width="700" />
+    <figcaption>Glasses</figcaption>
+  </figure>
+
+  <figure>
+    <img src="images/headphones.jpg" alt="Wired headphones" width="700" />
+    <figcaption>Headphones</figcaption>
+  </figure>
+
+  <figure>
+    <img src="images/ipad-case.jpg" alt="iPad case" width="700" />
+    <figcaption>iPad case</figcaption>
+  </figure>
+  
+  <figure>
     <img src="images/football.jpg" alt="Football" width="700" />
     <figcaption>Football</figcaption>
   </figure>
@@ -129,21 +144,6 @@
   <figure>
     <img src="images/hat.jpg" alt="Hat" width="700" />
     <figcaption>Hat</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/glasses.jpg" alt="Glasses" width="700" />
-    <figcaption>Glasses</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/headphones.jpg" alt="Wired headphones" width="700" />
-    <figcaption>Headphones</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/ipad-case.jpg" alt="iPad case" width="700" />
-    <figcaption>iPad case</figcaption>
   </figure>
 
   <figure>
@@ -187,6 +187,36 @@
       <th>Mode</th>
     </tr>
     <tr>
+      <td>Glasses</td>
+      <td>30g</td>
+      <td>Vision Store</td>
+      <td>Bedroom</td>
+      <td>$100</td>
+      <td>7 years</td>
+      <td>Dirty and scratched</td>
+      <td>Recycle</td>
+    </tr>
+    <tr>
+      <td>Headphones</td>
+      <td>Light</td>
+      <td>Apple</td>
+      <td>Bedroom</td>
+      <td>$20</td>
+      <td>10 years</td>
+      <td>Damaged and ripped</td>
+      <td>Recycle</td>
+    </tr>
+    <tr>
+      <td>iPad case</td>
+      <td>200g</td>
+      <td>Target</td>
+      <td>Bedroom</td>
+      <td>$15</td>
+      <td>12 years</td>
+      <td>Used and ripped</td>
+      <td>Recycle</td>
+    </tr>
+    <tr>
       <td>Football</td>
       <td>400g</td>
       <td>Prize</td>
@@ -227,36 +257,6 @@
       <td>Donation</td>
     </tr>
     <tr>
-      <td>Glasses</td>
-      <td>30g</td>
-      <td>Vision Store</td>
-      <td>Bedroom</td>
-      <td>$100</td>
-      <td>7 years</td>
-      <td>Dirty and scratched</td>
-      <td>Recycle</td>
-    </tr>
-    <tr>
-      <td>Headphones</td>
-      <td>Light</td>
-      <td>Apple</td>
-      <td>Bedroom</td>
-      <td>$20</td>
-      <td>10 years</td>
-      <td>Damaged and ripped</td>
-      <td>Recycle</td>
-    </tr>
-    <tr>
-      <td>iPad case</td>
-      <td>200g</td>
-      <td>Target</td>
-      <td>Bedroom</td>
-      <td>$15</td>
-      <td>12 years</td>
-      <td>Used and ripped</td>
-      <td>Recycle</td>
-    </tr>
-    <tr>
       <td>Stuffed toy</td>
       <td>Light</td>
       <td>Gift</td>
@@ -287,12 +287,12 @@
   <p>
     Thank you for coming along with me this week of trash disposal. I kept pushing these items back in
     my closet because I wasn’t ready to get rid of them, but looking back now, even though they hold
-    memories to me, it’s time for me to move on and make new ones.
+    memories for me, it’s time for me to move on and make new ones.
   </p>
 
   <p>
     Some of these items are still good and can be useful to someone else, so I hope to donate what I
-    can and that some kid can make good memories like I did with them. Thanks again for reading and 
+    can, and that some kid can make good memories as I did with them. Thanks again for reading and 
     coming along with me on my trash disposal journey.
   </p>
 
