Change gallery layout from figures to a table
Replaced figure elements with a table for better layout of gallery items.

--- a/twp/twp-main.html
+++ b/twp/twp-main.html
@@ -111,50 +111,23 @@
 
   <h2 id="gallery">Gallery: Nine Items from This Week</h2>
 
-  <figure>
-    <img src="images/glasses.jpg" alt="Glasses" width="700" />
-    <figcaption>Glasses</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/headphones.jpg" alt="Wired headphones" width="700" />
-    <figcaption>Headphones</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/ipad-case.jpg" alt="iPad case" width="700" />
-    <figcaption>iPad case</figcaption>
-  </figure>
-  
-  <figure>
-    <img src="images/football.jpg" alt="Football" width="700" />
-    <figcaption>Football</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/controller.jpg" alt="Game controller" width="700" />
-    <figcaption>Controller</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/board-game.jpg" alt="Board game set" width="700" />
-    <figcaption>Board game set</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/hat.jpg" alt="Hat" width="700" />
-    <figcaption>Hat</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/stuffed-toy.jpg" alt="Stuffed toy" width="700" />
-    <figcaption>Stuffed toy</figcaption>
-  </figure>
-
-  <figure>
-    <img src="images/cup.jpg" alt="Cup" width="700" />
-    <figcaption>Cup</figcaption>
-  </figure>
+  <table>
+  <tr>
+    <td><img src="images/glasses.jpg" alt="Glasses" width="300" /></td>
+    <td><img src="images/headphones.jpg" alt="Wired headphones" width="300" /></td>
+    <td><img src="images/ipad-case.jpg" alt="iPad case" width="300" /></td>
+  </tr>
+  <tr>
+    <td><img src="images/football.jpg" alt="Football" width="300" /></td>
+    <td><img src="images/controller.jpg" alt="Game controller" width="300" /></td>
+    <td><img src="images/board-game.jpg" alt="Board game set" width="300" /></td>
+  </tr>
+  <tr>
+    <td><img src="images/hat.jpg" alt="Hat" width="300" /></td>
+    <td><img src="images/stuffed-toy.jpg" alt="Stuffed toy" width="300" /></td>
+    <td><img src="images/cup.jpg" alt="Cup" width="300" /></td>
+  </tr>
+  </table>
 
   <h3>Order I noticed them this week</h3>
   <ol>
